--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -1,46 +1,44 @@
-@model List<CustomerModel>
+@model X.PagedList.IPagedList<CustomerModel>
+@using X.PagedList.Mvc.Core;
 
 <h4>Consulte os seus Clientes cadastrados na sua Loja ou realize o cadastro de novos Clientes</h4>
-<p>
+<div>
     <a href="@Url.Action("Create", "Customer")" class="btn btn-primary">Adicionar Cliente</a>
-</p>
+    <button class="btn btn-primary" onclick="expandFilterForm()">Filtrar</button>
+</div>
 
-<div id="filterSection">
-  <h4 class="filter-heading">
-    <i id="iconeFilter" class="fas fa-chevron-up"></i> Filtrar Compradores
-  </h4>
-  <div id="filterFormDiv" class="@(ViewBag.IsFilter ? "collapse show" : "collapse")">
-    <form id="filterForm" method="post" action="@Url.Action("Index", "Customer")">
-        <input type="hidden" id="isFilter" name="isFilter" value="false" />
+<div id="filterFormDiv" class="collapse">
+<h4 class="filter-heading">Filtrar Compradores</h4>
+<form id="filterForm" method="post" action="@Url.Action("Index", "Customer")">
+    <input type="hidden" id="isFilter" name="isFilter" value="false" />
 
-        <div class="form-group">
-            <label for="name">Nome/Razão Social:</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="Nome ou Razão Social do Cliente">
-        </div>
-        <div class="form-group">
-            <label for="email">E-mail:</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="E-mail do Cliente">
-        </div>
-        <div class="form-group">
-            <label for="phone">Telefone:</label>
-            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Telefone do Cliente">
-        </div>
-        <div class="form-group">
-            <label for="registrationDate">Data de Cadastro:</label>
-            <input type="date" class="form-control" id="registrationDate" name="registrationDate" placeholder="Selecione uma data ou período">
-        </div>
-        <div class="form-group">
-            <label for="isBlocked">Cliente bloqueado:</label>
-            <select class="form-control" id="isBlocked" name="isBlocked">
-                <option value="">-- Selecione --</option>
-                <option value="true">SIM</option>
-                <option value="false">NÃO</option>
-            </select>
-        </div>
-        <button type="submit" class="btn btn-primary" onclick="removeShowClass();setFilterFlag()">Filtrar</button>
-        <button type="button" class="btn btn-secondary" onclick="clearFilters()">Limpar filtros</button>
-    </form>
-  </div>
+    <div class="form-group">
+        <label for="name">Nome/Razão Social:</label>
+        <input type="text" class="form-control" id="name" name="name" placeholder="Nome ou Razão Social do Cliente">
+    </div>
+    <div class="form-group">
+        <label for="email">E-mail:</label>
+        <input type="email" class="form-control" id="email" name="email" placeholder="E-mail do Cliente">
+    </div>
+    <div class="form-group">
+        <label for="phone">Telefone:</label>
+        <input type="tel" class="form-control" id="phone" name="phone" placeholder="Telefone do Cliente">
+    </div>
+    <div class="form-group">
+        <label for="registrationDate">Data de Cadastro:</label>
+        <input type="date" class="form-control" id="registrationDate" name="registrationDate" placeholder="Selecione uma data ou período">
+    </div>
+    <div class="form-group">
+        <label for="isBlocked">Cliente bloqueado:</label>
+        <select class="form-control" id="isBlocked" name="isBlocked">
+            <option value="">-- Selecione --</option>
+            <option value="true">SIM</option>
+            <option value="false">NÃO</option>
+        </select>
+    </div>
+    <button type="submit" class="btn btn-primary" onclick="hiddenFilterForm()">Aplicar filtros</button>
+    <button type="button" class="btn btn-secondary" onclick="clearFilters()">Limpar filtros</button>
+</form>
 </div>
 
 <div id="customerList">
@@ -85,6 +83,28 @@
     </div>
 </div>
 
+<nav aria-label="Page navigation">
+    <ul class="pagination  pagination-primary justify-content-center">
+        <li class="page-item @(Model.PageNumber == 1 ? "disabled" : "")">
+            <a class="page-link" href="@Url.Action("Index", new { page = 1 })">Primeira</a>
+        </li>
+        <li class="page-item @(Model.HasPreviousPage ? "" : "disabled")">
+            <a class="page-link" href="@Url.Action("Index", new { page = Model.PageNumber - 1 })">Anterior</a>
+        </li>
+        @for (var pageNumber = 1; pageNumber <= Model.PageCount; pageNumber++)
+        {
+            <li class="page-item @(pageNumber == Model.PageNumber ? "active" : "")">
+                <a class="page-link" href="@Url.Action("Index", new { page = pageNumber })">@pageNumber</a>
+            </li>
+        }
+        <li class="page-item @(Model.HasNextPage ? "" : "disabled")">
+            <a class="page-link" href="@Url.Action("Index", new { page = Model.PageNumber + 1 })">Próxima</a>
+        </li>
+        <li class="page-item @(Model.PageNumber == Model.PageCount ? "disabled" : "")">
+            <a class="page-link" href="@Url.Action("Index", new { page = Model.PageCount })">Última</a>
+        </li>
+    </ul>
+</nav>
 
 <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -121,31 +141,14 @@
             });
         });
 
-        document.addEventListener("DOMContentLoaded", function() {
-            const filterHeading = document.querySelector(".filter-heading");
+        function expandFilterForm() {
             const filterFormDiv = document.getElementById("filterFormDiv");
-            let iconeFilter = document.getElementById("iconeFilter");
-
-            filterHeading.addEventListener("click", function() {
-                filterHeading.classList.toggle("expanded");
-                filterFormDiv.classList.toggle("show");
-                iconeFilter.classList.toggle("fa-chevron-down");
-                iconeFilter.classList.toggle("fa-chevron-up");
-            });
-        });
-
-        function removeShowClass() {
-            const filterFormDiv = document.getElementById("filterFormDiv");
-            let iconeFilter = document.getElementById("iconeFilter");
-            filterFormDiv.classList.remove("show");
-            document.getElementById("isFilter").value = "false";
-            iconeFilter.classList.remove("fa-chevron-up");
-            iconeFilter.classList.add("fa-chevron-down");
+            filterFormDiv.classList.add("show");
         }
 
-        function setFilterFlag() {
-            event.preventDefault();
-            document.getElementById("isFilter").value = "true";
+        function hiddenFilterForm() {
+            const filterFormDiv = document.getElementById("filterFormDiv");
+            filterFormDiv.classList.remove("show");
         }
 
         function clearFilters() {
