--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -3,45 +3,45 @@
 
 <h4>Consulte os seus Clientes cadastrados na sua Loja ou realize o cadastro de novos Clientes</h4>
 <div>
-    <a href="@Url.Action("Create", "Customer")" class="btn btn-primary">Adicionar Cliente</a>
+    <a href="@Url.Action("Create", "Customer")" class="btn btn-primary me-3">Adicionar Cliente</a>
     <button class="btn btn-primary" onclick="expandFilterForm()">Filtrar</button>
 </div>
 
-<div id="filterFormDiv" class="collapse">
-<h4 class="filter-heading">Filtrar Compradores</h4>
-<form id="filterForm" method="post" action="@Url.Action("Index", "Customer")">
-    <input type="hidden" id="isFilter" name="isFilter" value="false" />
+<div id="filterFormDiv" class="collapse mt-3 mb-3">
+    <h4 class="filter-heading">Filtrar Compradores</h4>
+    <form class="row" id="filterForm" method="post" action="@Url.Action("Filter", "Customer")">
+        <input type="hidden" id="isFilter" name="isFilter" value="false" />
 
-    <div class="form-group">
-        <label for="name">Nome/Razão Social:</label>
-        <input type="text" class="form-control" id="name" name="name" placeholder="Nome ou Razão Social do Cliente">
-    </div>
-    <div class="form-group">
-        <label for="email">E-mail:</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="E-mail do Cliente">
-    </div>
-    <div class="form-group">
-        <label for="phone">Telefone:</label>
-        <input type="tel" class="form-control" id="phone" name="phone" placeholder="Telefone do Cliente">
-    </div>
-    <div class="form-group">
-        <label for="registrationDate">Data de Cadastro:</label>
-        <input type="date" class="form-control" id="registrationDate" name="registrationDate" placeholder="Selecione uma data ou período">
-    </div>
-    <div class="form-group">
-        <label for="isBlocked">Cliente bloqueado:</label>
-        <select class="form-control" id="isBlocked" name="isBlocked">
-            <option value="">-- Selecione --</option>
-            <option value="true">SIM</option>
-            <option value="false">NÃO</option>
-        </select>
-    </div>
-    <button type="submit" class="btn btn-primary" onclick="hiddenFilterForm()">Aplicar filtros</button>
-    <button type="button" class="btn btn-secondary" onclick="clearFilters()">Limpar filtros</button>
-</form>
+        <div class="form-group mb-2">
+            <label for="name">Nome/Razão Social:</label>
+            <input type="text" class="form-control" id="name" name="name" placeholder="Nome ou Razão Social do Cliente">
+        </div>
+        <div class="form-group mb-2">
+            <label for="email">E-mail:</label>
+            <input type="text" class="form-control" id="email" name="email" placeholder="E-mail do Cliente">
+        </div>
+        <div class="form-group col-md-6 mb-3">
+            <label for="phone">Telefone:</label>
+            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Telefone do Cliente">
+        </div>
+        <div class="form-group col-md-3">
+            <label for="registrationDate">Data de Cadastro:</label>
+            <input type="date" class="form-control" id="registrationDate" name="registrationDate" placeholder="Selecione uma data ou período">
+        </div>
+        <div class="form-group col-md-3">
+            <label for="isBlocked">Cliente bloqueado:</label>
+            <select class="form-control" id="isBlocked" name="isBlocked">
+                <option value="">-- Selecione --</option>
+                <option value="true">SIM</option>
+                <option value="false">NÃO</option>
+            </select>
+        </div>    
+        <button type="submit" class="btn btn-primary col-md-2 me-3" onclick="hiddenFilterForm()">Aplicar filtros</button>
+        <button type="button" class="btn btn-secondary col-md-2" onclick="clearFilters()">Limpar filtros</button>
+    </form>
 </div>
 
-<div id="customerList">
+<div id="customerList" class="mt-3">
     <h4>Lista de Compradores</h4>
     <div id="customerGrid">
         <table class="table">
@@ -83,7 +83,7 @@
     </div>
 </div>
 
-<nav aria-label="Page navigation">
+<nav aria-label="Page navigation" class="mt-3">
     <ul class="pagination  pagination-primary justify-content-center">
         <li class="page-item @(Model.PageNumber == 1 ? "disabled" : "")">
             <a class="page-link" href="@Url.Action("Index", new { page = 1 })">Primeira</a>
@@ -133,14 +133,13 @@
                 let UrlHandler="/Customer/Delete/"+CustomerId;
                 $.ajax({
                     url: UrlHandler, 
-                    type: 'GET',
+                    type: 'POST',
                     success: function() {
-                        location.href = location.href;
+                        location.href = '/Customer';
                     }
                 });
             });
         });
-
 
         var selectAllCheckbox = document.getElementById("selectAll");
         var selectRowCheckboxes = document.getElementsByClassName("selectRow");
@@ -164,6 +163,20 @@
         }
 
         function clearFilters() {
+            $('#name').val('');
+            $('#email').val('')
+            $('#phone').val('')
+            $('#registrationDate').val('')
+            $('#isBlocked').val('')
+            $.ajax({
+                url: '/Customer/ClearFilters', 
+                type: 'POST',
+                success: function() {   
+                    location.href = '/Customer';
+                },
+                error: function (error) {
+                }                
+            });
         }
 
         function DisplayConfirmDeleteModal(CustomerId) {
