--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -8,10 +8,119 @@
 
 @using (Html.BeginForm("Create", "Customer", FormMethod.Post))
 {
-    <partial name="_CustomerFormPartial" model="Model" />
+    <div class="row">
+        <div class="form-group mb-2">
+            <label asp-for="Name">Nome do Cliente/Razão Social:</label>
+            <input asp-for="Name" class="form-control" data-toggle="tooltip" title="Nome completo ou Razão Social do Cliente."/>
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+
+        <div class="form-group mb-2">
+            <label asp-for="Email">E-Mail:</label>
+            <input asp-for="Email" class="form-control" data-toggle="tooltip" title="E-mail do Cliente."/>
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+
+        <div class="form-group mb-2 col-md-6">
+            <label asp-for="Phone">Telefone:</label>
+            <input asp-for="Phone" class="form-control" data-mask="(00) 00000-0000"
+                 data-toggle="tooltip" title="Telefone do Cliente."
+            />
+            <span asp-validation-for="Phone" class="text-danger"></span>
+        </div class="form-group mb-2">
+
+        <div class="form-group mb-2 col-md-6">
+            <label asp-for="RegistrationDate">Data de Cadastro:</label>
+            <input asp-for="RegistrationDate" class="form-control" disabled
+            />
+        </div class="form-group mb-2">
+
+        <h2>Informações Pessoais</h2>
+
+        <div class="form-group mb-2 col-md-4">
+            <label asp-for="PersonType">Tipo de Pessoa:</label>
+            <select id="PersonType" asp-for="PersonType" asp-items="Html.GetEnumSelectList<PersonType>()" class="form-control"
+                 data-toggle="tooltip" title="Selecione o tipo de Pessoa."
+            ></select>
+            <span asp-validation-for="PersonType" class="text-danger"></span>
+        </div>
+
+        <div class="form-group mb-2 col-md-4">
+            <label asp-for="CPF_CNPJ">CPF/CNPJ:</label>
+            <input id="cpfCnpjInput" asp-for="CPF_CNPJ" class="form-control"
+                 data-toggle="tooltip" title="Insira o CPF ou o CNPJ do Cliente."
+            />
+            <span asp-validation-for="CPF_CNPJ" class="text-danger"></span>
+        </div>
+
+        <div class="form-group mb-2 col-md-4">
+            <label asp-for="StateRegistration">Inscrição Estadual:</label>
+            <input asp-for="StateRegistration" class="form-control"
+                 data-toggle="tooltip" title="Inscrição Estadual do Cliente, selecionar Isento caso assim for."
+            />
+            <span asp-validation-for="StateRegistration" class="text-danger"></span>
+        </div>
+
+        <div class="form-group mb-2 col-md-4">
+            <label asp-for="IsExempt">Isento:</label>
+            <input asp-for="IsExempt" class="form-check-input" type="checkbox" 
+            />
+        </div>
+
+        <div class="form-group mb-2 col-md-4">
+            <label asp-for="Gender">Gênero:</label>
+            <select asp-for="Gender" asp-items="Html.GetEnumSelectList<Gender>()" class="form-control"
+                 data-toggle="tooltip" title="Selecione o gênero do Cliente."
+            ></select>
+            <span asp-validation-for="Gender" class="text-danger"></span>
+        </div>
+
+        <div class="form-group mb-2 col-md-4">
+            <label asp-for="DateOfBirth">Data de Nascimento:</label>
+            <input asp-for="DateOfBirth" class="form-control" type="date" 
+                 data-toggle="tooltip" title="Data de nascimento do Cliente."
+            />
+            <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+        </div>
+
+        <h2>Situação do Cliente</h2>
+
+        <div class="form-group mb-2">
+            <label asp-for="IsBlocked">Bloqueado:</label>
+            <input asp-for="IsBlocked" class="form-check-input" type="checkbox" 
+                 data-toggle="tooltip" title="Bloqueia o acesso do Cliente na sua Loja"
+            />
+        </div>
+
+        <h2>Senha de Acesso</h2>
+
+        <div class="form-group mb-2 col-md-6">
+            <label asp-for="Password">Senha:</label>
+            <input asp-for="Password" class="form-control" type="password" 
+                 data-toggle="tooltip" title="Cadastre a senha de acesso do seu Cliente"
+            />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+
+        <div class="form-group mb-2 col-md-6">
+            <label asp-for="ConfirmPassword">Confirmação de Senha:</label>
+            <input asp-for="ConfirmPassword" class="form-control" type="password" 
+                 data-toggle="tooltip" title="Tooltip on top"
+            />
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+        </div>
+    </div>
 
     <div>
         <button type="submit" class="btn btn-primary">Adicionar Cliente</button>
         <button class="btn btn-warning" asp-controller="Customer" asp-action="Index">Voltar</button>
     </div>
+}
+
+@section Scripts {
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 }
