fix: update cores and size in buttons

--- a/Views/Customer/Edit.cshtml
+++ b/Views/Customer/Edit.cshtml
@@ -115,7 +115,7 @@
 
     <div>
         <button type="submit" class="btn btn-primary">Alterar Cliente</button>
-        <button class="btn btn-warning" asp-controller="Customer" asp-action="Index">Voltar</button>
+        <button class="btn btn-secondary" asp-controller="Customer" asp-action="Index">Voltar</button>
     </div>
 }
 
