--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -113,7 +113,7 @@
 
     <div>
         <button type="submit" class="btn btn-primary">Adicionar Cliente</button>
-        <button class="btn btn-warning" asp-controller="Customer" asp-action="Index">Voltar</button>
+        <button class="btn btn-secondary" asp-controller="Customer" asp-action="Index">Voltar</button>
     </div>
 }
 
