--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -52,18 +52,18 @@
             <span asp-validation-for="CPF_CNPJ" class="text-danger"></span>
         </div>
 
+        <div class="form-group mb-2 col-md-4 d-flex align-items-center">
+            <label asp-for="IsExempt">Isento:</label>
+            <input id="IsExempt" asp-for="IsExempt" class="form-check-input ms-2" type="checkbox" 
+            />
+        </div>
+
         <div class="form-group mb-2 col-md-4">
             <label asp-for="StateRegistration">Inscrição Estadual:</label>
             <input id="StateRegistration" asp-for="StateRegistration" class="form-control"
                  data-toggle="tooltip" title="Inscrição Estadual do Cliente, selecionar Isento caso assim for."
             />
             <span asp-validation-for="StateRegistration" class="text-danger"></span>
-        </div>
-
-        <div class="form-group mb-2 col-md-4">
-            <label asp-for="IsExempt">Isento:</label>
-            <input asp-for="IsExempt" class="form-check-input" type="checkbox" 
-            />
         </div>
 
         <div class="form-group mb-2 col-md-4">
@@ -125,7 +125,7 @@
             
             var cpfCnpjInput = $('#cpfCnpjInput');
             cpfCnpjInput.inputmask("999.999.999-99");
-            
+
             $('#PersonType').change(function () {
                 var PersonType = $(this).val();
 
@@ -136,7 +136,20 @@
                 }
             });            
         });
-        
+
+        var isExempt = document.getElementById('IsExempt');
+        var stateRegistrationInput = document.getElementById('StateRegistration');
+
+        isExempt.addEventListener('change', function() {
+            if (isExempt.checked) {
+                stateRegistrationInput.value = '';
+                stateRegistrationInput.disabled = true;
+            } else {
+                stateRegistrationInput.disabled = false;
+            }
+        });
+
+
         function validationHandler(event) {
             var isValidCpfCnpj = validateCpfCnpjNew(event)
             var isValidEmail = validateEmailNew(event);
