--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -72,11 +72,11 @@
                         <td>@customer.Phone</td>
                         <td>@customer.RegistrationDate.ToString("dd/MM/yyyy")</td>
                         <td>
-                            <input type="checkbox" class="isBlockedCheckbox" @(customer.IsBlocked ? "checked" : "")/>
+                            <input type="checkbox" class="isBlockedCheckbox" @(customer.IsBlocked ? "checked" : "")></input>
                         </td>
                         <td>
-                            <a href="@Url.Action("Edit", "Customer", new { id = customer.Id })" class="btn btn-primary">Editar</a>
-                            <a class='btn btn-danger' onclick="DisplayConfirmDeleteModal('@customer.Id')" >Deletar</a>
+                            <a href="@Url.Action("Edit", "Customer", new { id = customer.Id })" class="btn btn-primary @(customer.IsBlocked ? "disabled" : "")">Editar</a>
+                            <a class="btn btn-danger @(customer.IsBlocked ? "disabled" : "")" onclick="DisplayConfirmDeleteModal('@customer.Id')" >Deletar</a>
                         </td>
                     </tr>
                 }
