--- a/Views/Customer/Edit.cshtml
+++ b/Views/Customer/Edit.cshtml
@@ -106,7 +106,7 @@
         <div class="form-group mb-2 col-md-6">
             <label asp-for="ConfirmPassword">Confirmação de Senha:</label>
             <input asp-for="ConfirmPassword" class="form-control" type="password" 
-                    data-toggle="tooltip" title="Tooltip on top"
+                    data-toggle="tooltip" title="Confirme a senha de acesso do seu Cliente"
             />
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
@@ -133,15 +133,16 @@
             var isExemptCheckbox = $('#IsExempt');
             var stateRegistrationInput = $('#StateRegistration');
             var personType = $('#PersonType');
-            cpfCnpjInput.inputmask("999.999.999-99");
+            cpfCnpjInput.inputmask("999.999.999-99", { numericInput: true });
+            stateRegistrationInput.inputmask("999.999.999.999", { numericInput: true }); 
 
             personType.change(function() {
                 var PersonType = $(this).val();
 
                 if (PersonType == 0) {
-                    $('#cpfCnpjInput').inputmask("999.999.999-99");
+                    $('#cpfCnpjInput').inputmask("999.999.999-99", { numericInput: true });
                 } else {
-                    $('#cpfCnpjInput').inputmask("99.999.999/9999-99");
+                    $('#cpfCnpjInput').inputmask("99.999.999/9999-99", { numericInput: true });
                 }
             });
 
@@ -153,7 +154,7 @@
                 } else {
                     stateRegistrationInput.prop('disabled', false);
                     stateRegistrationInput.val('');
-                    // stateRegistrationInput.inputmask("999.999.999.999"); 
+                    stateRegistrationInput.inputmask("999.999.999.999", { numericInput: true }); 
                 }
             });
         });
@@ -167,6 +168,13 @@
             var form = $('form');
             var isValid = true;
 
+            var cpfCnpjInputValue = $('#cpfCnpjInput').inputmask('unmaskedvalue');
+            console.log(cpfCnpjInputValue);
+            $('#cpfCnpjInput').val(cpfCnpjInputValue.replace(/\D/g, ''));
+            var stateRegistrationInputValue = $('#StateRegistration').inputmask('unmaskedvalue');
+            console.log(stateRegistrationInputValue);
+            $('#StateRegistration').val(stateRegistrationInputValue.replace(/\D/g, ''));
+
             isValid = validateField(form, '#Email', '/Customer/ValidateEmail/', 'Este e-mail já está cadastrado para outro Cliente');
             isValid = validateField(form, '#cpfCnpjInput', '/Customer/ValidateCpfCnpj/', 'Este Cpf/Cnpj já está cadastrado para outro Cliente') && isValid;
             isValid = validateField(form, '#StateRegistration', '/Customer/ValidateStateRegistration/', 'Esta Inscrição Estadual já está cadastrada para outro Cliente') && isValid;
@@ -176,9 +184,18 @@
             } else {
                 form.append('<input type="hidden" name="clientValidationFailed" value="true" />');
             }
+            
             var tempoEmMilissegundos = 500;
             event.preventDefault();
             setTimeout(function() {
+                var cpfCnpjInputValue = $('#cpfCnpjInput').inputmask('unmaskedvalue');
+                console.log(cpfCnpjInputValue);
+                $('#cpfCnpjInput').val(cpfCnpjInputValue.replace(/\D/g, ''));
+                var stateRegistrationInputValue = $('#StateRegistration').inputmask('unmaskedvalue');
+                console.log(stateRegistrationInputValue);
+                $('#StateRegistration').val(stateRegistrationInputValue.replace(/\D/g, ''));
+@* form.find('#cpfCnpjInput').val(cpfCnpjInputValue.replace(/\D/g, ''));
+form.find('#StateRegistration').val(stateRegistrationInputValue.replace(/\D/g, '')); *@
                 form.submit();
             }, tempoEmMilissegundos);
         }
