feat: remove mask in client

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -98,6 +98,10 @@
             console.log("back");
             window.location.href = '/Customer/Index';
         }
+
+        function removeMask(value) {
+            return value.replace(/[^\d]+/g, '');
+        }
     </script>
 </body>
 </html>
